--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>jaxrs-api</artifactId>
+            <version>2.3.10.Final</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
