--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.bookstore</groupId>
     <artifactId>bookstore-api</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <jersey.version>2.35</jersey.version>
     </properties>
-
+    
+    <!-- Add repositories with HTTPS URLs -->
+    <repositories>
+        <repository>
+            <id>jboss-public-repository</id>
+            <name>JBoss Public Maven Repository Group</name>
+            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
+    
     <dependencies>
         <!-- JAX-RS API -->
         <dependency>
@@ -22,7 +29,6 @@
             <artifactId>javax.ws.rs-api</artifactId>
             <version>2.1.1</version>
         </dependency>
-
         <!-- Jersey implementation of JAX-RS -->
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
@@ -36,14 +42,12 @@
             <artifactId>jersey-media-json-jackson</artifactId>
             <version>${jersey.version}</version>
         </dependency>
-
         <!-- Jersey Injection Manager -->
         <dependency>
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-hk2</artifactId>
             <version>${jersey.version}</version>
         </dependency>
-
         <!-- Servlet API -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -51,14 +55,22 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- Updated RESTEasy dependency -->
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>jaxrs-api</artifactId>
-            <version>2.3.10.Final</version>
-            <type>jar</type>
+            <version>3.0.12.Final</version>
+        </dependency>
+        
+        <!-- Explicitly add JBoss Logging with a standard version -->
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+            <version>3.4.3.Final</version>
         </dependency>
     </dependencies>
-
+    
     <build>
         <plugins>
             <plugin>
